--- a/src/scss/_instructions.scss
+++ b/src/scss/_instructions.scss
@@ -1,6 +1,8 @@
 .instructions-container {
-  background:  linear-gradient($primary-color, rgb(152, 88, 224));
+  background: linear-gradient($primary-color, rgb(152, 88, 224));
   height: 100vh;
+  width: 100vw;
+  min-width: 600px;
 }
 
 .instructions-box {
@@ -8,9 +10,10 @@
   border-top-left-radius: 90px;
   border-bottom-right-radius: 90px;
   position: absolute;
-  width: 580px;
+  min-width: 600px;
+  width: 40vw;
   height: 520px;
-  left: 380px;
+  left: 30%;
   top: 50px;
   border: 10px solid #5624df;
 }
@@ -48,7 +51,7 @@
   position: absolute;
   width: 290px;
   height: 46px;
-  left: 160px;
+  left: 25%;
   top: 450px;
   font-family: Raleway;
   font-style: normal;
