--- a/src/scss/_wordStack.scss
+++ b/src/scss/_wordStack.scss
@@ -1,6 +1,7 @@
 .stack-box{
     border: 2px solid white ;
-    height:90px;
+    height:auto;
+    min-height: 90px;
     margin-top: 25px;
     border-radius: 4px;
     background: rgba(255, 255, 255, 0.288);
